--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,26 @@
 <resources>
-    <string name="app_name">Sunshine</string>
-    <string name="menu_refresh">Refresh</string>>
+    <string name="app_name" translatable="false">Sunshine</string>
+
+    <string name="show_on_map">Show on map</string>
+    <string name="settings">Settings</string>
+    <string name="share">Share</string>
+
+    <string name="pref_location_default" translatable="false">Cherkasy</string>
+    <string name="pref_location_key" translatable="false">location</string>
+    <string name="pref_location_title">Location</string>
+
+    <string name="pref_units_of_temp_default" translatable="false">metric</string>
+    <string-array name="pref_units_of_temp_entries">
+        <item>Fahrenheit</item>
+        <item>Celsius</item>
+        <item>Kelvin</item>
+    </string-array>
+    <string-array name="pref_units_of_temp_entry_value">
+        <item>imperial</item>
+        <item>metric</item>
+        <item> </item>
+    </string-array>
+    <string name="pref_units_of_temp_key" translatable="false">units of temperature</string>
+    <string name="pref_units_of_temp_title">Units of temperature</string>
+
 </resources>
