--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,28 @@
 <resources>
     <string name="app_name" translatable="false">Sunshine</string>
+    <string name="activity_detail_label">Detail</string>
+    <string name="activity_settings_label">Settings</string>
 
-    <string name="show_on_map">Show on map</string>
-    <string name="settings">Settings</string>
-    <string name="share">Share</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_show_on_map">Show on map</string>
+    <string name="action_share">Share</string>
 
     <string name="pref_location_default" translatable="false">Cherkasy</string>
     <string name="pref_location_key" translatable="false">location</string>
     <string name="pref_location_title">Location</string>
 
-    <string name="pref_units_of_temp_default" translatable="false">metric</string>
-    <string-array name="pref_units_of_temp_entries">
+    <string name="pref_temperature_units_default" translatable="false">metric</string>
+    <string-array name="pref_temperature_units_entries">
         <item>Fahrenheit</item>
         <item>Celsius</item>
         <item>Kelvin</item>
     </string-array>
-    <string-array name="pref_units_of_temp_entry_value">
+    <string-array name="pref_temperature_units_entry_value">
         <item>imperial</item>
         <item>metric</item>
         <item> </item>
     </string-array>
-    <string name="pref_units_of_temp_key" translatable="false">units of temperature</string>
-    <string name="pref_units_of_temp_title">Units of temperature</string>
-
+    <string name="pref_temperature_units_key" translatable="false">temperature units</string>
+    <string name="pref_temperature_units_title">Temperature units</string>
 </resources>
